--- a/wp-content/themes/portal-nc/scss/_custom-variables.scss
+++ b/wp-content/themes/portal-nc/scss/_custom-variables.scss
@@ -2,41 +2,74 @@
 // You can find them in node_modules/bootstrap/scss/_variables.scss
 // Copy the variables you need into this file, don't modify files under node_modules/
 
-//$white:    #fff;
-$gray-100: #f3f8ff;
-$gray-200: #e1e5f6;
-$gray-300: #d2d7f9;
-$gray-400: #a4a2b4;
-$gray-500: #6e7489; //
-$gray-600: #575a7b;
-$gray-700: #342e6d;
-$gray-800: #1b1642;
-$gray-900: #161720;
-//$black:    #000;
-
-// $gray-100: #f1f5fa;
-// $gray-200: #e9ecef;
-// $gray-300: #dde0e6;
-// $gray-400: #b5b8bf;
+// $white:    #fff;
+// $gray-100: #f3f8ff;
+// $gray-200: #e1e5f6;
+// $gray-300: #d2d7f9;
+// $gray-400: #a4a2b4;
 // $gray-500: #6e7489;
-// $gray-600: #6c757d;
-// $gray-700: #404251;
-// $gray-800: #343a40;
+// $gray-600: #575a7b;
+// $gray-700: #342e6d;
+// $gray-800: #1b1642;
 // $gray-900: #161720;
+// $black:    #000;
 
-$gn: #f0ff00;
+// $primary: #2f59ff;
+// $secondary: #694e93;
+// $success: #86f75e;
+// $info: #697ded;
+// $warning: #f5c170;
+// $danger: #ff694d;
+// $light: #e6ecf4;
+// $dark: #181c23;
 
-$primary: #6759eb; //#506bec ??
-$secondary: $gray-500;
-$success: #07fc6d;
-$info: #697ded;
-$warning: #f5c170;
-$danger: #ff694d;
-$light: $gray-100;
-$dark: $gray-900;
+// Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
+// $theme-colors: (
+//     "ncblue": #2f59ff,
+//     "ncgreen": #86f75e,
+//     "ncblack": #181c23,
+//     "ncpurple": #694e93,
+//     "ncdarkgreen": #004942,
+//     "ncdarkblue": #15263e,
+//     "ncgold": #ccac85,
+//     "ncwhite": #e6ecf4
+// );
 
-$font-family-sans-serif: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
-    "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif:
+    "DM Sans",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
+
+$headings-font-family:
+    "Poppins",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
+
+$headings-font-weight: 700;
+
+$progress-bar-transition: none;
+
+//$display-font-family: null !default;
 
 // $btn-border-radius: 100rem;
 // $btn-border-radius-lg: 100rem;
@@ -49,13 +82,8 @@ $font-family-sans-serif: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI
 //$enable-gradients: true;
 
 // Changing the body background and text
-//$body-bg: #d1ce26;
+// $body-bg: $dark;
 //$body-color: #151417;
 
 // Changing the border radius of buttons
 //$border-radius: 20px;
-
-// Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
-// $theme-colors: (
-//  "gn": #f0ff00
-// );
